server/public/styles.css
*{
  font-family: Product Sans, sans-serif;
}
.nav-button{
  outline: none !important;
}
.nav-links{
  transition: all 0.3s ease-out;
}
.nav-links:hover{
  transform: translate(20px,0);
  color: #FFF9C5
}
.container{
  margin-top: 88px;
}
.row{
  justify-content: center;
  margin: 1.5rem 0;
  transition: all 0.3s ease-out;
}
.button-outline{
  border: solid black 3px;
  border-radius: 13px;
  width: 249px;
  height: 56px;
  transition: all 0.3s ease-out;
}
.type-button{
  background-color: white;
  width: 249px;
  height: 56px;
  border: solid black 3px;
  font-size: 22px;
  text-align: left;
  padding: 0 24px;
  border-radius: 13px;
  transform: translate(-10px,-10px);
  transition: all 0.3s ease-out;
  outline: none !important;
}
.type-button:hover{
  transform: translate(-3px, -3px);
  background-color: #FFF9C5;
}

.spinnerDiv{
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.exercises-container{
  margin-top: 56px;
  transition: all 0.3s ease-out;
}
.header{
  text-transform: uppercase;
  margin: 2rem;
}
.row.row-exercise{
  border: solid black 1px;
  border-radius: 16px;
  margin: auto;
  margin-bottom: 2.5rem;
  transition: all 0.3s ease-out;
}
.exercise-name{
  border: solid black 3px;
  border-radius: 13px;
  width: 100%;
  transition: all 0.3s ease-out;
  margin: 0;
  text-align: left;
  padding: 2rem;
  background-color: white;
  outline: none !important;
}
.exercise-name:hover{
  transform: translate(0, -10px);
  background-color: #FFF9C5;
}
.row.row-exercise:hover{
  background-color: black;
}

.container.single-exercise{
  width: 93%;
  margin-bottom: 4rem;
}
.row.row-exercise-single{
  border: solid 5px black;
  border-radius: 33px;
  position: relative;
  flex-direction: column;
  align-items: center;
}
.img-div{
  margin: 3rem 2rem 2rem;
  width: 80% !important;
}
.exercise-img{
  width: 400px;
  margin: auto;
  transition: 0.3s ease-out;
}
.placeholder-img-div{
  width: 200px;
  margin: auto;
}
.fas.fa-images{
  font-size: 200px;
  cursor: default;
}
.description{
  font-size: 18px;
  margin: 0 3rem 2rem;
  max-height: 8rem;
  overflow: auto;
}
.fas{
  font-size: 40px;
  cursor: pointer;
  transition: all 0.3s ease-out;
}
.star-icon{
  position: absolute;
  left: 1rem;
  top: 1rem;
}
.star-icon:hover{
  color: #FFEE59;
}
.link{
  color: #008BF5;
  transition: all 0.3s ease-out;
  font-size: 18px;
  text-align: center;
  width: 60%;
}
.link:hover{
  color: #47C26A;
}
.reps, .sets{
  padding: 10px 30px;
  border: solid;
  border-radius: 13px;
  background-color: #FFF9C5;
  text-align: left;
}
.fas.fa-caret-up, .fas.fa-caret-down{
  margin: -7px 0;
}
.fas.fa-caret-up:hover{
  color: #47C26A;
}
.fas.fa-caret-down:hover{
  color: #EF233C;
}
.num{
  margin-top: 0.5rem;
}
.modal-content{
  background-color: #FFF9C5;
  border: solid black 4px;
  border-radius: 13px;
  padding: 1.5rem;
}
.modal-header{
  border: none;
  margin: auto;
}

.fas.fa-plus:hover{
  color: #47C26A;
  transform: rotate(90deg);
}
.type-header{
  background-color: #FFF9C5;
  border-radius: 13px;
  width: 11rem;
  height: 3.5rem;
}
.favorites-exercise-row{
  margin: 2.2rem;
  transition: all 0.3s ease-out;
}
.fas.fa-trash{
  font-size: 33px;
}
.fas.fa-trash:hover{
  color:#EF233C;
}
.fas.fa-hand-point-left{
  margin-right: 4rem;
  font-size: 50px;
  margin-top: 7px;
}
.fas.fa-hand-point-left:hover{
  color: #47C26A;
}
.fas.fa-thumbs-up:hover{
  color: #EF233C;
}

.fas.fa-times:hover{
  transform: rotate(180deg);
  color: #EF233C;
}

.accordion{
  margin: 2rem 2rem 4rem;
}
.card{
  border: 4px black solid;
  border-radius: 16px;
}
.card-header{
  background-color: white;
  border: none;
}
.accordion-button{
  font-size: 28px;
  background-color: white;
}
.btn.focus, .btn:focus {
  box-shadow: none;
}

.fas.fa-ban:hover{
  color: #EF233C;
}
.form{
  margin: 2.2rem;
  font-size: 18px;
  background-color: #FFF9C5;
  border-radius: 33px;
  border: solid black 5px;
  transition: all 0.3s ease-out;
  padding-bottom: 2rem;
}
.form-group{
  margin: 3rem;
}
.text-input, .select, .textarea{
  outline: none;
  border-radius: 13px;
  border: none;
  transition: all 0.3s ease-out;
}
.text-input, .select{
  height: 2.5rem;
}
.textarea{
  height: 7rem;
  margin-bottom: 1rem;
}
.button-outline.form-submit{
  margin: auto;
  background-color: white;
  margin-bottom: 2rem;
}
.type-button:focus{
  transform: translate(-3px, -3px);
  background-color: #FFF9C5;
}
.text-input:focus, .select:focus, .textarea:focus{
  box-shadow: 0px 4px 5px 1px rgba(0,0,0,0.3);;
}

